# jbsays

./: .gitignore  .mcp.json  Dockerfile  Dockerfile.extensions  README.md  check_project_inboxes.py  default_prompt.md  double_trinity_prompt.md  jbsays  philosophy.md  project_manager.sh  projects.json.sample  requirements_telegram_bot.txt  telegram_bot_config.json.sample  telegram_bot_setup.md  telegram_inbox_bot.py  telegram_multiproject_inbox_bot.py  telegram_project_manager_bot.py  three_sacred_layers_prompt.md
examples/pythonlib/: LICENSE  Makefile  README.md  pyproject.toml
examples/pythonlib/benchmarks/: benchmark_middleware.py  run_benchmarks.sh
examples/pythonlib/docs/: ARCHITECTURE.md  PERFORMANCE_OPTIMIZATIONS.md  ROADMAP.md  patterns.md  quickstart.md  recipes.md
examples/pythonlib/examples/: basic_usage.py  web_scraper_middleware.py
examples/pythonlib/src/mware/: __init__.py  context.py  core.py  decorators.py  errors.py  types.py
examples/pythonlib/tests/: test_context.py  test_core.py  test_decorators.py  test_errors.py
install_vm/: README.md  diag.sh  install.sh
internal_tools/: audit_report.csv  check_inbox.py  log_analyzer.py  output.txt  split_epic.py
systemprompts/: default_prompt.md  double_trinity_prompt.md  three_sacred_layers_prompt.md
